force-app/main/default/objects/Modal__c/Modal__c.object-meta.xml
<CustomObject>
    <label>Modal</label>
    <nameField>
        <label>Modal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>