force-app/main/default/objects/Modal__c/fields/Action_Button_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Button_Name__c</fullName>
    <label>Action Button Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>