force-app/main/default/objects/Modal__c/fields/AllowPermanentDismissal__c.field-meta.xml
<CustomField>
    <fullName>AllowPermanentDismissal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>allow users to dismiss permanently. This is usually true but sometimes a modal like tasks need to be permanent.</description>
    <label>AllowPermanentDismissal</label>
    <type>Checkbox</type>
</CustomField>