force-app/main/default/objects/Modal__c/fields/Component_Attribute_Value__c.field-meta.xml
<CustomField>
    <fullName>Component_Attribute_Value__c</fullName>
    <label>Component Attribute Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>