force-app/main/default/objects/Modal__c/fields/Component_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Component_Attributes__c</fullName>
    <label>Component AttributesName</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>