force-app/main/default/objects/Modal__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <description>Name of the component using, must have namespace, for example c:cmpName or youtube:cmpName attributes of the component will be set differently.</description>
    <label>Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>