force-app/main/default/objects/Modal__c/fields/DelayDismissal__c.field-meta.xml
<CustomField>
    <fullName>DelayDismissal__c</fullName>
    <defaultValue>3000</defaultValue>
    <description>Delay for dismissal is 3000, 3 seconds</description>
    <label>DelayDismissal</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>