force-app/main/default/objects/Modal__c/fields/ResourceUrl__c.field-meta.xml
<CustomField>
    <fullName>ResourceUrl__c</fullName>
    <description>Salesforce or external resource url</description>
    <label>ResourceUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>