force-app/main/default/objects/Modal__c/fields/showActionButton__c.field-meta.xml
<CustomField>
    <fullName>showActionButton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>showActionButton</label>
    <type>Checkbox</type>
</CustomField>