force-app/main/default/objects/Modal__c/fields/Tagline__c.field-meta.xml
<CustomField>
    <fullName>Tagline__c</fullName>
    <label>Tagline</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>