force-app/main/default/objects/Modal__c/fields/useComponent__c.field-meta.xml
<CustomField>
    <fullName>useComponent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>useComponent</label>
    <type>Checkbox</type>
</CustomField>