force-app/main/default/objects/Modal__c/fields/YouTubeUrl__c.field-meta.xml
<CustomField>
    <fullName>YouTubeUrl__c</fullName>
    <label>YouTubeUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>